# bioparse-biocore-instances

./: bioparse-biocore-instances.cabal
scripts/: deploy-haddock-manually.sh
src/Bio/Parse/Orphans/: Biocore.hs
