name:                bioparse-biocore-instances
version:             0.1.0.0
synopsis:            Provides bioparse instances for biocore typeclasses
description:         Due to the licensing of biocore (LGPL) we provide a
                     separate package (this one) which contains orphan
                     instances for the types defined in bioparse, which is BSD
                     licensed.
homepage:            https://github.com/relrod/bioparse-biocore-instances
license:             LGPL
license-file:        COPYING
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2015 Ricky Elrod
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bio.Parse.Orphans.Biocore
  build-depends:       base >= 4 && < 5
                     , biocore >= 0.3 && < 0.4
                     , bioparse == 0.1.0.0
                     , bytestring >= 0.10 && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
